# Simple_ML_Deploy

./: .env.example  .gitignore  Dockerfile  README.md  app.py  doc.md  main.py  pyproject.toml  train_model.py
scripts/: run.py  train.py
src/: __init__.py  app.py  config.py  train_model.py
tests/: conftest.py  test_api.py
